packages/next-swc/crates/styled_jsx/tests/errors/wrong-jsx-expression-type/output.js
import _JSXStyle from "next/dist/shared/lib/styled-jsx/style";
export default (()=><div >

    <style jsx>

      {[]}

    </style>

  </div>);
